BROWSE-564 Fixed scrollbars

--- a/src/app/components/main-view/main-view.component.scss
+++ b/src/app/components/main-view/main-view.component.scss
@@ -113,7 +113,6 @@ div.main-view {
 
         div.section {
             border-radius: 1rem;
-            overflow: scroll;
             border: 1px solid $ghost-grey;
 
             &.bg-cerulean-light {
